@@ -74,6 +74,9 @@ trademarks or registered trademarks of Sun Microsystems, Inc.
 
 #include "ace/OS_NS_strings.h"
 
+#include "../Version.h"
+#include "ace/Version.h"
+
 #include <iostream>
 #include <fstream>
 #include <sstream>
@@ -127,12 +130,20 @@ void postprocess(const char* fn, ostringstream& content,
 {
   ostringstream out;
 
+  if (which == BE_GlobalData::STREAM_H) {
+    out << "/* -*- C++ -*- */\n";
+  }
+
+  out << "/* Generated by " << idl_global->prog_name()
+      << " version " DDS_VERSION " (ACE version " ACE_VERSION
+      << ") running on input file " << idl_global->main_filename()->get_string()
+      << " */\n";
+
   //  if .h add #ifndef...#define
   string macrofied;
 
   if (which == BE_GlobalData::STREAM_H) {
     macrofied = to_macro(fn);
-    out << "/* -*- C++ -*- */\n";
     out << "#ifndef " << macrofied << "\n#define " << macrofied << '\n';
     string taoheader = be_global->header_name_.c_str();
     taoheader.replace(taoheader.find("TypeSupportImpl.h"), 17, "C.h");
@@ -228,12 +239,6 @@ BE_produce()
 
     BE_abort();
   }
-
-  be_global->multicast("/* Generated by ");
-  be_global->multicast(idl_global->prog_name());
-  be_global->multicast(" running on input file ");
-  be_global->multicast(idl_fn);
-  be_global->multicast(" */\n");
 
   be_global->set_inc_paths(idl_global->idl_flags());
 
