@@ -1,3 +1,11 @@
+Fri Apr 15 14:50:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/idl/be_produce.cpp:
+
+          Added OpenDDS and ACE version numbers to the "Generated by..."
+          comment which is inserted at the top of generated files.
+          Moved this comment to the real top of the file, before #includes.
+
 Fri Apr 15 14:25:28 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * MPC/config/dds_suppress_any_support.mpb:
